Revert Sidebar Menus Spacing Regression; Fixes #226 (#333)

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -539,5 +539,9 @@ html:not(.big-picture) .right-buttons {
   }
 }
 
-
+.MuiMenuItem-root {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  min-height: 26px !important;
+}
 
